--- a/case-about-grants-incentives.html
+++ b/case-about-grants-incentives.html
@@ -102,7 +102,7 @@
 	</div>
 	<div class="row">
 		<div class="col-md-4">
-			<p><span class="d-block p-2 bg-success text-white"><b>The Challange</b></span></p>
+			<p><span class="d-block p-2 bg-success text-white"><b>The Challenge</b></span></p>
 			<p>Artcan Group and its affiliated companies
 are producers of cannabis flower and associated
 products located in Fitchburg, MA. To
