--- a/case-air-sierra.html
+++ b/case-air-sierra.html
@@ -67,7 +67,7 @@
 	</div>
 	<div class="row">
 		<div class="col-md-4">
-			<p><span class="d-block p-2 bg-success text-white"><b>The Challange</b></span></p>
+			<p><span class="d-block p-2 bg-success text-white"><b>The Challenge</b></span></p>
 			<p>When Sierra Gold Nursery decided to pursue a plant tissue culture project, they needed special rooms that could be precisely calibrated for humidity, temperature, and light. Delicate samples are expensive to cultivate, and the failure rate is unpredict- ably high. To control costs by controlling mortality, Sierra Gold needed to perfectly control the environment. BioTherm was already installing the heating solution in another project, so they asked, “Do you do cooling, too?”</p>
 		</div>
 		<div class="col-md-4">
