--- a/case-heat-allen.html
+++ b/case-heat-allen.html
@@ -72,7 +72,7 @@
 	</div>
 	<div class="row">
 		<div class="col-md-4">
-			<p><span class="d-block p-2 bg-heat text-white"><b>The Challange</b></span></p>
+			<p><span class="d-block p-2 bg-heat text-white"><b>The Challenge</b></span></p>
 			<p>Unit heaters were beating up Tiffany’s crop and wasting fuel. They dried out leaves, caused uneven production, and reduced harvest—all with high fuel costs. She had read that a hot water system could deliver consistent and optimum media and canopy temperatures, saving fuel and producing more tomatoes.</p>
 		</div>
 		<div class="col-md-4">
