--- a/case-heat-noak.html
+++ b/case-heat-noak.html
@@ -72,7 +72,7 @@
 	</div>
 	<div class="row">
 		<div class="col-md-4">
-			<p><span class="d-block p-2 bg-heat text-white"><b>The Challange</b></span></p>
+			<p><span class="d-block p-2 bg-heat text-white"><b>The Challenge</b></span></p>
 			<p>Nor’Eastern Farms had an old oil fired steam boiler connected to leaky and rusted steel pipes under the mobile benches they used to heat their potted plant crop. They struggled to keep temperature and main- tain the equipment, and constantly wor- ried the system would shut down, leaving their plants in the cold—all while paying high fuel bills. Bill, the facilities manager, was fed up and knew they needed an upgrade. He had heard about BioTherm from another greenhouse owner and told his boss to call 1-800-GET-HEAT.</p>
 		</div>
 		<div class="col-md-4">
