--- a/case-heat-orozco.html
+++ b/case-heat-orozco.html
@@ -72,7 +72,7 @@
 	</div>
 	<div class="row">
 		<div class="col-md-4">
-			<p><span class="d-block p-2 bg-heat text-white"><b>The Challange</b></span></p>
+			<p><span class="d-block p-2 bg-heat text-white"><b>The Challenge</b></span></p>
 			<p>Looking over his mounting fuel bills, Manfred Orozco was frustrated year after year by all the heat trapped above his greenhouse while his plants were in raised beds. He had problems with stunted roots, uneven growth, and cold spots.</p>
 			<p><span class="d-block p-2 bg-heat text-white"><b>The BioTherm Solution</b></span></p>
 			<p>Manfred called 1-800-GET-HEAT and his BioTherm consultant recommended a bed heating system. The BioTherm rep explained how MegaTube buried in the soil below the root line could bring the media temperature up in his raised beds.</p>
