--- a/case-heat-tinsdale.html
+++ b/case-heat-tinsdale.html
@@ -72,7 +72,7 @@
 	</div>
 	<div class="row">
 		<div class="col-md-4">
-			<p><span class="d-block p-2 bg-heat text-white"><b>The Challange</b></span></p>
+			<p><span class="d-block p-2 bg-heat text-white"><b>The Challenge</b></span></p>
 			<p>Beth was tired of the changing cost of plugs she purchased for her 5,000 sq.ft. ornamental perennials operation. Further, she couldn’t control the consistency of the product. She wanted to do her own plug propagation.</p>
 		</div>
 		<div class="col-md-4">
