--- a/case-hydro-fessler.html
+++ b/case-hydro-fessler.html
@@ -67,7 +67,7 @@
 	</div>
 	<div class="row">
 		<div class="col-md-4">
-			<p><span class="d-block p-2 bg-hydro text-white"><b>The Challange</b></span></p>
+			<p><span class="d-block p-2 bg-hydro text-white"><b>The Challenge</b></span></p>
 			<p>Fesslers Nursery wanted to expand their production space to meet their ever-grow- ing market demand. However, they also needed to provide the highest quality product, with the lowest labor cost, all the while maintaining their earth-friendly business practices.</p>
 		</div>
 		<div class="col-md-4">
