--- a/case-hydro-holy-city-farms.html
+++ b/case-hydro-holy-city-farms.html
@@ -67,7 +67,7 @@
 	</div>
 	<div class="row">
 		<div class="col-md-4">
-			<p><span class="d-block p-2 bg-hydro text-white"><b>The Challange</b></span></p>
+			<p><span class="d-block p-2 bg-hydro text-white"><b>The Challenge</b></span></p>
 			<p>Elizabeth struggled with summer crop failures two years in a row, and thought that excess heat was the cause. However, after making adjustments to keep her houses cooler, she discovered that something was wrong besides just the heat. She discovered that their irrigation water was too hot to hold an essential element…oxygen. Due to a lack of dissolved oxygen (DO) in their irrigation water, the roots of the plants were being smothered every time they watered causing the plants to suffocate and die from a condition known as Root Zone Hypoxia.</p>
 		</div>
 		<div class="col-md-4">
