--- a/case-hydro-mansfield.html
+++ b/case-hydro-mansfield.html
@@ -72,7 +72,7 @@
 	<div class="row">
 		<div class="col-md-4">
 			<br />
-			<p><span class="d-block p-2 bg-hydro text-white"><b>The Challange</b></span></p>
+			<p><span class="d-block p-2 bg-hydro text-white"><b>The Challenge</b></span></p>
 			<p>David won two new contracts to expand the reach of his regional greenhouse facili- ty, but he knew he would have to expand his production, as well. In order to control labor costs, while simultaneously increas- ing the square footage of his growing area without sacrificing quality, David decided to build a new flood floor equipped green- house.</p>
 		</div>	
 		<div class="col-md-4">
