--- a/case-air-sunnyside.html
+++ b/case-air-sunnyside.html
@@ -67,7 +67,7 @@
 	</div>
 	<div class="row">
 		<div class="col-md-4">
-			<p><span class="d-block p-2 bg-success text-white"><b>The Challange</b></span></p>
+			<p><span class="d-block p-2 bg-success text-white"><b>The Challenge</b></span></p>
 			<p>Nancy knew that greenhouses are prone to suffer from reduced levels of CO2 and that increasing the CO2 concentration above ambient could help boost her crop yield. However, her experiences with CO2 burners had always been disappointing and she wasn’t interested in a liquid CO2 system. One option that had always intrigued her was to use exhaust gas from a boiler system, but she had assumed the technology was either unsafe or simply too expensive to implement. BioTherm had already success- fully provided rootzone heating and oxygen infusion technologies to help her grow bigger, healthier crops in less time. Since those investments had paid for themselves very quickly, she wanted to understand how a CO2 system would benefit her and requested a proposal for a centralized CO2 Enrichment system which could increase her yield even more.</p>
 		</div>
 		<div class="col-md-4">
