--- a/case-heat-micheals.html
+++ b/case-heat-micheals.html
@@ -66,7 +66,7 @@
 
 		<div class="col-md-4">
 			<br />
-			<p><span class="d-block p-2 bg-heat text-white"><b>The Challange</b></span></p>
+			<p><span class="d-block p-2 bg-heat text-white"><b>The Challenge</b></span></p>
 			<p>Michael’s Greenhouse won a contract to grow bedding plants and hanging baskets for several big box stores. To accommo- date the new business, they needed a way to turn more crops over each spring and expand the capacity of their growing operations.</p>
 			<p><br /><span class="d-block p-2 bg-heat text-white"><b>The BioTherm Solution</b></span></p>
 			<p>BioTherm provided Michael’s with a <a href="heat-products-microclimate-tubing.html">MicroClimate Floor Heating System</a> on top of his native soil. Sandwiched between two pieces of fabric, it provided an evenly heated surface across the floor space. No slab was needed for the warm floor. His flats sit directly on top of the gently heated surface. With a BioTherm MicroClimate floor heating system, Patrick was able to shorten his grow time by 4-5 weeks.</p>
