--- a/case-heat-strode.html
+++ b/case-heat-strode.html
@@ -72,7 +72,7 @@
 	</div>
 	<div class="row">
 		<div class="col-md-4">
-			<p><span class="d-block p-2 bg-heat text-white"><b>The Challange</b></span></p>
+			<p><span class="d-block p-2 bg-heat text-white"><b>The Challenge</b></span></p>
 			<p>Business was almost going too well for Randy Strode and his son Ty of AgriStarts in Apopka, Florida. Product was in high demand and they knew they were going to need more plant volume while maintaining the already incredible quality and uniformity their cus- tomers had come to expect. Expansion was the answer. They choose BioTherm to design and install the heating system.</p>
 			<p>Agri-Starts may be a tissue culture-to-plug production business, but their needs are not much different from any demanding growing facility. If anything separates </p>
 		</div>
