--- a/about.html
+++ b/about.html
@@ -158,7 +158,7 @@
 	</div>
 	
 	<div class="maps">
-	<iframe src="https://www.google.com/maps/d/embed?mid=1CL3irhr3rOXj-aplTVfKKo1a4byZF9yn&hl=en" width="640" height="480" style="float:right;"></iframe>	
+		<iframe src="https://www.google.com/maps/d/embed?mid=1CL3irhr3rOXj-aplTVfKKo1a4byZF9yn&ll=40.89558358875506%2C-95.84592211874994&z=2" width="100%" height="450" frameborder="0" style="border:0;"></iframe>	
 	</div>
 	
 	<div class="container">
@@ -174,6 +174,40 @@
 	
 <!--     *********    TEAM     *********      -->
 <div class="section text-center">
+	<div class="row">
+		<div class="col-md-3">
+			<div class="card card-profile card-plain">
+				<div class="card-header card-avatar">
+					<img class="img rounded img-raised" src="img/about_J_REARDEN.jpg" />
+				</div>
+				<div class="card-body">
+					<h4 class="card-title">Jim Reardon</h4>
+					<h6 class="card-category text-muted">CEO</h6>
+					<p><small><script>document.write("<n uers='znvygb:werneqra@ovbgurezfbyhgvbaf.pbz'>werneqra@ovbgurezfbyhgvbaf.pbz</n>".replace(/[a-zA-Z]/g, function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script></small></p>
+					<p class="card-description"><a href="tel:+1707-238-5850">707-238-5850</a></p>
+				</div>
+				<div class="card-footer justify-content-center">
+					<a href="https://www.linkedin.com/in/jim-rearden-833a596" class="btn btn-just-icon btn-link btn-linkedin"><i class="fab fa-linkedin"></i></a>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-3">
+			<div class="card card-profile card-plain">
+				<div class="card-header card-avatar">
+					<img class="img rounded img-raised" src="img/about_M_MUCHOW.jpg" />
+				</div>
+				<div class="card-body">
+					<h4 class="card-title">	Mike Muchow</h4>
+					<h6 class="card-category text-muted">Vice President &amp; Project Director</h6>
+					<p><small><script>document.write("<n uers='znvygb:zzhpubj@ovbgurezfbyhgvbaf.pbz'>zzhpubj@ovbgurezfbyhgvbaf.pbz</n>".replace(/[a-zA-Z]/g, function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script></small></p>
+					<p class="card-description"><a href="tel:+1707-238-5858">707-238-5858</a></p>
+				</div>
+				<div class="card-footer justify-content-center">
+					<a href="https://www.linkedin.com/in/mike-muchow-29898ab" class="btn btn-just-icon btn-link btn-linkedin"><i class="fab fa-linkedin"></i></a>
+				</div>
+			</div>
+		</div>
+	</div>
 	<div class="row">
 		<div class="col-md-3">
 			<div class="card card-profile card-plain">
@@ -194,7 +228,7 @@
 		<div class="col-md-3">
 			<div class="card card-profile card-plain">
 				<div class="card-header card-avatar">
-					<img class="img rounded img-raised" src="img/about_Mike-Muchow.jpg" />
+					<img class="img rounded img-raised" src="img/about_M_MUCHOW.jpg" />
 				</div>
 				<div class="card-body">
 					<h4 class="card-title">	Mike Muchow</h4>
