--- a/about.html
+++ b/about.html
@@ -212,43 +212,11 @@
 		<div class="col-md-3">
 			<div class="card card-profile card-plain">
 				<div class="card-header card-avatar">
-					<img class="img rounded img-raised" src="img/about_Jim-Rearden.jpg" />
-				</div>
-				<div class="card-body">
-					<h4 class="card-title">Jim Reardon</h4>
-					<h6 class="card-category text-muted">CEO</h6>
-					<p><small><script>document.write("<n uers='znvygb:werneqra@ovbgurezfbyhgvbaf.pbz'>werneqra@ovbgurezfbyhgvbaf.pbz</n>".replace(/[a-zA-Z]/g, function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script></small></p>
-					<p class="card-description"><a href="tel:+1707-238-5850">707-238-5850</a></p>
-				</div>
-				<div class="card-footer justify-content-center">
-					<a href="https://www.linkedin.com/in/jim-rearden-833a596" class="btn btn-just-icon btn-link btn-linkedin"><i class="fab fa-linkedin"></i></a>
-				</div>
-			</div>
-		</div>
-		<div class="col-md-3">
-			<div class="card card-profile card-plain">
-				<div class="card-header card-avatar">
-					<img class="img rounded img-raised" src="img/about_M_MUCHOW.jpg" />
-				</div>
-				<div class="card-body">
-					<h4 class="card-title">	Mike Muchow</h4>
-					<h6 class="card-category text-muted">Vice President &amp; Project Director</h6>
-					<p><small><script>document.write("<n uers='znvygb:zzhpubj@ovbgurezfbyhgvbaf.pbz'>zzhpubj@ovbgurezfbyhgvbaf.pbz</n>".replace(/[a-zA-Z]/g, function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script></small></p>
-					<p class="card-description"><a href="tel:+1707-238-5858">707-238-5858</a></p>
-				</div>
-				<div class="card-footer justify-content-center">
-					<a href="https://www.linkedin.com/in/mike-muchow-29898ab" class="btn btn-just-icon btn-link btn-linkedin"><i class="fab fa-linkedin"></i></a>
-				</div>
-			</div>
-		</div>
-		<div class="col-md-3">
-			<div class="card card-profile card-plain">
-				<div class="card-header card-avatar">
-					<img class="img" src="img/about_Thad-Humphrey.jpg" />
+					<img class="img" src="img/about_T_HUMPHREY.jpg" />
 				</div>
 				<div class="card-body">
 					<h4 class="card-title">Thad Humphrey, P.E.</h4>
-					<h6 class="card-category text-muted">Engineering Director</h6>
+					<h6 class="card-category text-muted">CTO</h6>
 					<p><small><script>document.write("<n uers='znvygb:guhzcuerl@ovbgurezfbyhgvbaf.pbz'>guhzcuerl@ovbgurezfbyhgvbaf.pbz</n>".replace(/[a-zA-Z]/g, function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script></small></p>
 					<p class="card-description"><a href="tel:+1707-238-5852">707-238-5852</a></p>
 				</div>
@@ -260,11 +228,45 @@
 		<div class="col-md-3">
 			<div class="card card-profile card-plain">
 				<div class="card-header card-avatar">
-					<img class="img" src="img/about_Joel-Rechin.jpg" />
+					<img class="img" src="img/about_S_RANSFORD.jpg" />
 				</div>
 				<div class="card-body">
-					<h4 class="card-title">Joel Rechin</h4>
-					<h6 class="card-category text-muted">Key Accounts Manager</h6>
+					<h4 class="card-title">Shawn Ransford</h4>
+					<h6 class="card-category text-muted">CINO</h6>
+					<p><small><script>document.write("<n uers='znvygb:fenafsbeq@ovbgurezfbyhgvbaf.pbz'>fenafsbeq@ovbgurezfbyhgvbaf.pbz</n>".replace(/[a-zA-Z]/g, function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script></small></p>
+					<p class="card-description"><a href="tel:+1707-238-5847">707-238-5847</a></p>
+				</div>
+				<div class="card-footer justify-content-center">
+					<a href="https://www.linkedin.com/in/shawn-ransford-6998214" class="btn btn-just-icon btn-link btn-linkedin"><i class="fab fa-linkedin"></i></a>
+					<a href="https://www.instagram.com/knowyourgrow/" class="btn btn-just-icon btn-link btn-facebook"><i class="fab fa-instagram"></i></a>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-3">
+			<div class="card card-profile card-plain">
+				<div class="card-header card-avatar">
+					<img class="img" src="img/about_D_WHITTEMORE.jpg" />
+				</div>
+				<div class="card-body">
+					<h4 class="card-title">Dan Whittemore</h4>
+					<h6 class="card-category text-muted">Senior Mechanical Designer</h6>
+					<p><small><script>document.write("<n uers='znvygb:qjuvggrzber@ovbgurezfbyhgvbaf.pbz'>qjuvggrzber@ovbgurezfbyhgvbaf.pbz</n>".replace(/[a-zA-Z]/g, function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script></small></p>
+					<p class="card-description"><a href="tel:+1707-238-5847">707-238-5847</a></p>
+				</div>
+				<div class="card-footer justify-content-center">
+					<a href="https://www.linkedin.com/in/daniel-whittemore-9056a946" class="btn btn-just-icon btn-link btn-linkedin"><i class="fab fa-linkedin"></i></a>
+					<a href="#" class="btn btn-just-icon btn-link btn-facebook"><i class="fab fa-facebook-square"></i></a>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-3">
+			<div class="card card-profile card-plain">
+				<div class="card-header card-avatar">
+					<img class="img" src="img/about_D_CARDONA.jpg" />
+				</div>
+				<div class="card-body">
+					<h4 class="card-title">Daniel Cardona</h4>
+					<h6 class="card-category text-muted">Mechanical Designer</h6>
 					<p><small><script>document.write("<n uers='<n uers='znvygb:werpuva@ovbgurezfbyhgvbaf.pbz'>werpuva@ovbgurezfbyhgvbaf.pbz</n>".replace(/[a-zA-Z]/g, function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script></small></p>
 					<p class="card-description"><a href="tel:+1707-238-5857">707-238-5857</a></p>
 				</div>
@@ -279,27 +281,11 @@
 		<div class="col-md-3">
 			<div class="card card-profile card-plain">
 				<div class="card-header card-avatar">
-					<img class="img rounded img-raised" src="img/about_Bill-Essert.jpg" />
-				</div>
-				<div class="card-body">
-					<h4 class="card-title">Bill Essert</h4>
-					<h6 class="card-category text-muted">Director of Business Development</h6>
-					<p><small><script>document.write("<n uers='znvygb:orffreg@ovbgurezfbyhgvbaf.pbz'>orffreg@ovbgurezfbyhgvbaf.pbz</n>".replace(/[a-zA-Z]/g, function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script></small></p>
-					<p class="card-description"><a href="tel:+1707-238-5846">707-238-5846</a></p>
-				</div>
-				<div class="card-footer justify-content-center">
-					<a href="https://www.linkedin.com/in/billessert" class="btn btn-just-icon btn-link btn-linkedin"><i class="fab fa-linkedin"></i></a>
-				</div>
-			</div>
-		</div>
-		<div class="col-md-3">
-			<div class="card card-profile card-plain">
-				<div class="card-header card-avatar">
-					<img class="img rounded img-raised" src="img/about_Dan-Kuipers.jpg" />
+					<img class="img rounded img-raised" src="img/about_D_KUIPERS.jpg" />
 				</div>
 				<div class="card-body">
 					<h4 class="card-title">Dan Kuipers</h4>
-					<h6 class="card-category text-muted">Regional Sales Manager and Incentives Specialist</h6>
+					<h6 class="card-category text-muted">Director of Sales</h6>
 					<p><small><script>document.write("<n uers='znvygb:qxhvcref@ovbgurezfbyhgvbaf.pbz'>qxhvcref@ovbgurezfbyhgvbaf.pbz</n>".replace(/[a-zA-Z]/g, function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script></small></p>
 					<p class="card-description"><a href="tel:+1616-396-6101">616-396-6101</a></p>
 				</div>
@@ -311,11 +297,61 @@
 		<div class="col-md-3">
 			<div class="card card-profile card-plain">
 				<div class="card-header card-avatar">
-					<img class="img" src="img/about_Julio-Reyes.jpg" />
+					<img class="img rounded img-raised" src="img/about_C_TAMAGNI.jpg" />
+				</div>
+				<div class="card-body">
+					<h4 class="card-title">Carol Tamagni</h4>
+					<h6 class="card-category text-muted">Sales Executive</h6>
+					<p><small><script>document.write("<n uers='znvygb:pgnzntav@ovbgurezfbyhgvbaf.pbz'>pgnzntav@ovbgurezfbyhgvbaf.pbz</n>".replace(/[a-zA-Z]/g, function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script></small></p>
+					<p class="card-description"><a href="tel:+1707-238-5857">707-238-5857</a></p>
+				</div>
+				<div class="card-footer justify-content-center">
+					<a href="https://www.linkedin.com/in/billessert" class="btn btn-just-icon btn-link btn-linkedin"><i class="fab fa-linkedin"></i></a>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-3">
+			<div class="card card-profile card-plain">
+				<div class="card-header card-avatar">
+					<img class="img" src="img/about_S_REARDEN.jpg" />
+				</div>
+				<div class="card-body">
+					<h4 class="card-title">Sam Rearden</h4>
+					<h6 class="card-category text-muted">Sales Executive</h6>
+					<p><small><script>document.write("<n uers='znvygb:ferneqra@ovbgurezfbyhgvbaf.pbz'>ferneqra@ovbgurezfbyhgvbaf.pbz</n>".replace(/[a-zA-Z]/g, function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script></small></p>
+					<p class="card-description"><a href="tel:+1707-237-9235">707-237-9235</a></p>
+				</div>
+				<div class="card-footer justify-content-center">
+					
+				</div>
+			</div>
+		</div>
+		<div class="col-md-3">
+			<div class="card card-profile card-plain">
+				<div class="card-header card-avatar">
+					<img class="img" src="img/about_M_WINKLER.jpg" />
+				</div>
+				<div class="card-body">
+					<h4 class="card-title">Matt Winkler</h4>
+					<h6 class="card-category text-muted">Sales Executive</h6>
+					<p><small><script>document.write("<n uers='znvygb:zjvaxyre@ovbgurezfbyhgvbaf.pbz'>zjvaxyre@ovbgurezfbyhgvbaf.pbz</n>".replace(/[a-zA-Z]/g, function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script></small></p>
+					<p class="card-description"><a href="tel:+1707-238-5846">707-238-5846</a></p>
+				</div>
+				<div class="card-footer justify-content-center">
+					
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-3">
+			<div class="card card-profile card-plain">
+				<div class="card-header card-avatar">
+					<img class="img" src="img/about_J_REYES.jpg" />
 				</div>
 				<div class="card-body">
 					<h4 class="card-title">Julio Reyes</h4>
-					<h6 class="card-category text-muted">Warehouse Manager</h6>
+					<h6 class="card-category text-muted">Purchasing/Operations Manager</h6>
 					<p><small><script>document.write("<n uers='znvygb:werlrf@ovbgurezfbyhgvbaf.pbz'>werlrf@ovbgurezfbyhgvbaf.pbz</n>".replace(/[a-zA-Z]/g, function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script></small></p>
 					<p class="card-description"><a href="tel:+1707-238-5853">707-238-5853</a></p>
 				</div>
@@ -327,36 +363,67 @@
 		<div class="col-md-3">
 			<div class="card card-profile card-plain">
 				<div class="card-header card-avatar">
-					<img class="img" src="img/about_Dan-Whittemore.jpg" />
+					<img class="img" src="img/about_B_THAMMAVONG.jpg" />
 				</div>
 				<div class="card-body">
-					<h4 class="card-title">Dan Whittemore</h4>
-					<h6 class="card-category text-muted">Designer</h6>
-					<p><small><script>document.write("<n uers='znvygb:qjuvggrzber@ovbgurezfbyhgvbaf.pbz'>qjuvggrzber@ovbgurezfbyhgvbaf.pbz</n>".replace(/[a-zA-Z]/g, function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script></small></p>
-					<p class="card-description"><a href="tel:+1707-238-5847">707-238-5847</a></p>
+					<h4 class="card-title">Bobby Thammavong</h4>
+					<h6 class="card-category text-muted">Warehouse Manager</h6>
+					<p><small><script>document.write("<n uers='znvygb:ogunzznibat@ovbgurezfbyhgvbaf.pbz'>ogunzznibat@ovbgurezfbyhgvbaf.pbz</n>".replace(/[a-zA-Z]/g, function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script></small></p>
+					<p class="card-description"><a href="tel:+1707-238-5853">707-238-5853</a></p>
 				</div>
 				<div class="card-footer justify-content-center">
-					<a href="https://www.linkedin.com/in/daniel-whittemore-9056a946" class="btn btn-just-icon btn-link btn-linkedin"><i class="fab fa-linkedin"></i></a>
-					<a href="#" class="btn btn-just-icon btn-link btn-facebook"><i class="fab fa-facebook-square"></i></a>
+
 				</div>
 			</div>
 		</div>
+		<div class="col-md-3">
+			<div class="card card-profile card-plain">
+				<div class="card-header card-avatar">
+					<img class="img" src="img/about_M_KAVANHVIGIL.jpg" />
+				</div>
+				<div class="card-body">
+					<h4 class="card-title">Martin Kavanh-Vigil</h4>
+					<h6 class="card-category text-muted">Warehouse Production Technician</h6>
+					<p><small><script>document.write("<n uers='znvygb:zxninauivtvy@ovbgurezfbyhgvbaf.pbz'>zxninauivtvy@ovbgurezfbyhgvbaf.pbz</n>".replace(/[a-zA-Z]/g, function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script></small></p>
+					<p class="card-description"><a href="tel:+1707-238-5853">707-238-5853</a></p>
+				</div>
+				<div class="card-footer justify-content-center">
+
+				</div>
+			</div>
+		</div>
+		<div class="col-md-3">
+			<div class="card card-profile card-plain">
+				<div class="card-header card-avatar">
+					<img class="img" src="img/about_N_LOPEZ.jpg" />
+				</div>
+				<div class="card-body">
+					<h4 class="card-title">Nora Lopez</h4>
+					<h6 class="card-category text-muted">Shipping/Receiving/Accounting Clerk</h6>
+					<p><small><script>document.write("<n uers='znvygb:aybcrm@ovbgurezfbyhgvbaf.pbz'>aybcrm@ovbgurezfbyhgvbaf.pbz</n>".replace(/[a-zA-Z]/g, function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script></small></p>
+					<p class="card-description"><a href="tel:+1707-778-0458">707-778-0458</a></p>
+				</div>
+				<div class="card-footer justify-content-center">
+
+				</div>
+			</div>
+		</div>
+
 	</div>
 	<div class="row">
 		<div class="col-md-3">
 			<div class="card card-profile card-plain">
 				<div class="card-header card-avatar">
-					<img class="img" src="img/about_Shawn-Ransford.jpg" />
+					<img class="img" src="img/about_H_REARDEN.jpg" />
 				</div>
 				<div class="card-body">
-					<h4 class="card-title">Shawn Ransford</h4>
-					<h6 class="card-category text-muted">CTO</h6>
-					<p><small><script>document.write("<n uers='znvygb:fenafsbeq@ovbgurezfbyhgvbaf.pbz'>fenafsbeq@ovbgurezfbyhgvbaf.pbz</n>".replace(/[a-zA-Z]/g, function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script></small></p>
-					<p class="card-description"><a href="tel:+1707-238-5847">707-238-5847</a></p>
+					<h4 class="card-title">Haley Rearden</h4>
+					<h6 class="card-category text-muted">Office Administrator</h6>
+					<p><small><script>document.write("<n uers='znvygb:uerneqra@ovbgurezfbyhgvbaf.pbz'>uerneqra@ovbgurezfbyhgvbaf.pbz</n>".replace(/[a-zA-Z]/g, function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script></small></p>
+					<p class="card-description"><a href="tel:+1707-241-3664">707-241-3664</a></p>
 				</div>
 				<div class="card-footer justify-content-center">
-					<a href="https://www.linkedin.com/in/shawn-ransford-6998214" class="btn btn-just-icon btn-link btn-linkedin"><i class="fab fa-linkedin"></i></a>
-					<a href="https://www.instagram.com/knowyourgrow/" class="btn btn-just-icon btn-link btn-facebook"><i class="fab fa-instagram"></i></a>
+
 				</div>
 			</div>
 		</div>
