punch case grants

--- a/case-about-grants-incentives.html
+++ b/case-about-grants-incentives.html
@@ -107,7 +107,7 @@
 are producers of cannabis flower and associated
 products located in Fitchburg, MA. To
 become a leader in an evolving and competitive
-marketplace, a new high efficiency
+marketplace, a new high-efficiency
 greenhouse encompassing approximately
 32,000 sq. ft. of production space is being
 planned.</p>
@@ -148,7 +148,7 @@ amount that would be offered to Artcan as
 an incentive to purchase more efficient
 (and more expensive) equipment. Through
 this process, Artcan saved $150,000
-through rebates and incentives.o</p>
+through rebates and incentives.</p>
 		</div>
 	</div>
 </div>
