--- a/contact.html
+++ b/contact.html
@@ -328,9 +328,9 @@
 			<div class="col-md-3">
 	         <h5>Product</h5>
 				<ul class="links-vertical">
-					<li><a href="heat.html">Heat</a></li>
-					<li><a href="hydro.html">Hydro</a></li>
-					<li><a href="tech.html">Tech</a></li>
+					<li><a href="heat.html">Heating Systems</a></li>
+					<li><a href="hydro.html">Hydro Sciences</a></li>
+					<li><a href="air.html">Optimized Air</a></li>
 				</ul>
 			</div>
 			<div class="col-md-3">
