--- a/case-heat-micheals.html
+++ b/case-heat-micheals.html
@@ -67,15 +67,15 @@
 		<div class="col-md-4">
 			<br />
 			<p><span class="d-block p-2 bg-heat text-white"><b>The Challenge</b></span></p>
-			<p>Michael’s Greenhouse won a contract to grow bedding plants and hanging baskets for several big box stores. To accommo- date the new business, they needed a way to turn more crops over each spring and expand the capacity of their growing operations.</p>
+			<p>Michael’s Greenhouse won a contract to grow bedding plants and hanging baskets for several big box stores. To accommodate the new business, they needed a way to turn more crops over each spring and expand the capacity of their growing operations.</p>
 			<p><br /><span class="d-block p-2 bg-heat text-white"><b>The BioTherm Solution</b></span></p>
 			<p>BioTherm provided Michael’s with a <a href="heat-products-microclimate-tubing.html">MicroClimate Floor Heating System</a> on top of his native soil. Sandwiched between two pieces of fabric, it provided an evenly heated surface across the floor space. No slab was needed for the warm floor. His flats sit directly on top of the gently heated surface. With a BioTherm MicroClimate floor heating system, Patrick was able to shorten his grow time by 4-5 weeks.</p>
 			<p>For his hanging baskets, BioTherm provided a <a href="heat-products-duofin.html">DuoFin Top Heating System</a> that gently radiates heat around the plants, maintaining a consistent and even temperature.</p>
 			<p>To plan for the future, Michael’s opted to have BioTherm design the boiler system to be easily expandable so he wouldn’t have to re-do any infrastructure.</p>
-			<p>As Michael’s expanded, so did his heat- ing system, by easily adding additional boilers. And not just the boilers, we sized the pipes and pumps for this expansion so there was no need for retrofit.</p>
+			<p>As Michael’s expanded, so did his heating system, by easily adding additional boilers. And not just the boilers, we sized the pipes and pumps for this expansion so there was no need for retrofit.</p>
 			<p><br /><span class="d-block p-2 bg-heat text-white"><b>How It Works</b></span></p>
 			<p>“With a completely heated floor surface, we were able to shorten our grow time by 4-5 weeks, increase production, and grow a more consistent and healthy crop,” Patrick said.</p>
-			<p>Also, while maintaining a gentle and con- sistent heat for his hanging basket crop, the DuoFin Top Heat System did double duty as a snow melt system for his greenhouses.</p>
+			<p>Also, while maintaining a gentle and consistent heat for his hanging basket crop, the DuoFin Top Heat System did double duty as a snow melt system for his greenhouses.</p>
 			<p>With the added benefit of high-efficiency boilers, Patrick was able to save money on fuel, adding to his bottom line. Because of the increase in energy savings, Michael’s even qualified for a grant which helped pay for the boilers!</p>
 		</div>
 		<div class="col-md-8">
@@ -99,7 +99,7 @@
 			<div class="col-md-8">
 				<figure class="figure d-block">
 					<img src="img/heat_ov_microclimate-sandwhich.jpg" class="figure-img img-fluid rounded" alt=""/>
-					<figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
+					<figcaption class="figure-caption text-right"></figcaption>
 				</figure>
 				
 				<img src="img/heat_ov_Duofin-Top-Heat.jpg" class="figure-img img-fluid rounded" alt=""/>
