--- a/case-heat-allen.html
+++ b/case-heat-allen.html
@@ -77,13 +77,13 @@
 		</div>
 		<div class="col-md-4">
 			<p><span class="d-block p-2 bg-heat text-white"><b>The BioTherm Solution</b></span></p>
-			<p>BioTherm recommended a vertical <a href="heat-products-duofin.html">DuoFin Heating System</a> that could warm the media and provide gentle heat to the canopy. The DuoFin heat pipes were stra- tegically located in and around the vines and the fruit, with vertical loops to bring steady gentle heat to the plant.
+			<p>BioTherm recommended a vertical <a href="heat-products-duofin.html">DuoFin Heating System</a> that could warm the media and provide gentle heat to the canopy. The DuoFin heat pipes were strategically located in and around the vines and the fruit, with vertical loops to bring steady gentle heat to the plant.
 In addition, MegaTube was deployed around the root level to maintain
-consistently warm root and media tem- perature to encourage robust growth.</p>
+consistently warm root and media temperature to encourage robust growth.</p>
 		</div>
 		<div class="col-md-4">
 			<p><span class="d-block p-2 bg-heat text-white"><b>How It Works</b></span></p>
-			<p>Consistent heat at the canopy and at the root media causes more branching, health- ier foliage and less disease pressure. By warming the roots directly, the plant increases nutrient uptake, resulting in greater harvest and healthier fruit.</p>
+			<p>Consistent heat at the canopy and at the root media causes more branching, healthier foliage and less disease pressure. By warming the roots directly, the plant increases nutrient uptake, resulting in greater harvest and healthier fruit.</p>
 		</div>
 
 	</div>
