--- a/case-heat-tinsdale.html
+++ b/case-heat-tinsdale.html
@@ -77,11 +77,11 @@
 		</div>
 		<div class="col-md-4">
 			<p><span class="d-block p-2 bg-heat text-white"><b>The BioTherm Solution</b></span></p>
-			<p>BioTherm provided Beth with an easy-to-install <a href="heat-applications-bench.html"><b>Bench Warmer</b></a> kit that provides gentle and consistent heat for 950 sq.ft. of her metal-topped benches. The durable MicroClimate tubing fit perfectly into the framing, underneath the metal tops, pro- viding a smooth and accessible heated surface. The system is small enough that a traditional tanked hot water heater is a sufficient heat source. Beth is now able to propagate her own perennial starts and control the costs and consistency of her products.</p>
+			<p>BioTherm provided Beth with an easy-to-install <a href="heat-applications-bench.html"><b>Bench Warmer</b></a> kit that provides gentle and consistent heat for 950 sq.ft. of her metal-topped benches. The durable MicroClimate tubing fit perfectly into the framing, underneath the metal tops, providing a smooth and accessible heated surface. The system is small enough that a traditional tanked hot water heater is a sufficient heat source. Beth is now able to propagate her own perennial starts and control the costs and consistency of her products.</p>
 		</div>
 		<div class="col-md-4">
 			<p><span class="d-block p-2 bg-heat text-white"><b>How It Works</b></span></p>
-			<p>The innovative BioTherm Bench Warmer heating system delivers the perfect amount of heat energy right at the bench- top, where the plants grow. The tubing is evenly spaced to ensure even heating with no chance of striping, which is especially important for propagation.</p>
+			<p>The innovative BioTherm Bench Warmer heating system delivers the perfect amount of heat energy right at the benchtop, where the plants grow. The tubing is evenly spaced to ensure even heating with no chance of striping, which is especially important for propagation.</p>
 		</div>
 
 	</div>
@@ -110,17 +110,7 @@
 					</a>
 					<figcaption class="figure-caption text-right">MicroClimate tubing provides even and consistent heat for Beth’s ornamental plugs.</figcaption>
 				</figure>
-				<figure class="figure d-block">
-					<a href="img/case_tinsdale_micro.jpg" class="thumbnail fancybox" data-toggle="lightbox" >
-					<img src="img/case_tinsdale_micro.jpg" class="figure-img img-fluid rounded" alt=""/>
-					</a>
-					<figcaption class="figure-caption text-right">The MegaMicro Family of connectors make it easy to install tubing under a bench.</figcaption>
-				</figure>
-				<figure class="figure d-block">
-					<a href="img/case_tinsdale_co2-2.jpg" class="thumbnail fancybox" data-toggle="lightbox" >
-					<img src="img/case_tinsdale_co2-2.jpg" class="figure-img img-fluid rounded" alt=""/>
-					</a>
-					<figcaption class="figure-caption text-right">BioTherm CO<sub>2</sub> system used for CO<sub>2</sub> production in Fukashima, Japan</figcaption>
+
 				</figure>
 			</div>
 			<div class="col-md-8">
@@ -128,18 +118,14 @@
 					<figcaption class="figure-caption text-right"><h4><b>Microclimate Tubing Bench Warmer Kit</b></h4></figcaption>
 					<img src="img/case_tinsdale_bench.jpg" class="figure-img img-fluid rounded" alt=""/>
 				</figure>
-				<span class="d-block p-2 bg-heat text-white"></span>
+
 				<figure class="figure d-block">
 					<figcaption class="figure-caption text-right"><h4><b>BioTherm CO<sub>2</sub> System</b></h4></figcaption>
 					<img src="img/case_tinsdale_co2.jpg" class="figure-img img-fluid rounded" alt=""/>
 				</figure>
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-md-12">
-			<span class="d-block p-2 bg-heat text-white"></span>
-			</div>
-		</div>
+
 	</div>
 	
 	<div class="container section">
