--- a/heat.html
+++ b/heat.html
@@ -197,7 +197,7 @@
 			<div class="col-md-4">
 				<a href="case-heat-strode.html">
 				<span class="d-block p-4 bg-dark text-white">
-					<img src="img/case_strode.jpg" style="border:4px solid;" class="figure-img img-fluid rounded" alt="">
+					<img src="img/case_strode_cover.jpg" style="border:4px solid;" class="figure-img img-fluid rounded" alt="">
 					<img src="img/front-climate-white-full.png" class="float-right" width=80px style="opacity: 0.1;"/> 
 					<h4><b>Randy Strode</b> <br />AgriStarts<br />Apopka, FL <br /><b>Investing in the Future</b></h4>
 				</span>
@@ -207,7 +207,7 @@
 			<div class="col-md-4">
 				<a href="case-heat-noak.html">
 				<span class="d-block p-4 bg-dark text-white">
-					<img src="img/case_micheals_flowers.jpg" style="border:4px solid;" class="figure-img img-fluid rounded" alt="">
+					<img src="img/case_noak_raypack.jpg" style="border:4px solid;" class="figure-img img-fluid rounded" alt="">
 					<img src="img/front-climate-white-full.png" class="float-right" width=80px style="opacity: 0.1;"/> 
 					<h4><b>Bill Noak</b> <br />Nor’Eastern Farms<br />Lowell, MA <br /><b>Upgrading for Success</b></h4>
 				</span>
