--- a/case-heat-noak.html
+++ b/case-heat-noak.html
@@ -73,7 +73,7 @@
 	<div class="row">
 		<div class="col-md-4">
 			<p><span class="d-block p-2 bg-heat text-white"><b>The Challenge</b></span></p>
-			<p>Nor’Eastern Farms had an old oil fired steam boiler connected to leaky and rusted steel pipes under the mobile benches they used to heat their potted plant crop. They struggled to keep temperature and main- tain the equipment, and constantly wor- ried the system would shut down, leaving their plants in the cold—all while paying high fuel bills. Bill, the facilities manager, was fed up and knew they needed an upgrade. He had heard about BioTherm from another greenhouse owner and told his boss to call 1-800-GET-HEAT.</p>
+			<p>Nor’Eastern Farms had an old oil fired steam boiler connected to leaky and rusted steel pipes under the mobile benches they used to heat their potted plant crop. They struggled to keep temperature and maintain the equipment, and constantly worried the system would shut down, leaving their plants in the cold—all while paying high fuel bills. Bill, the facilities manager, was fed up and knew they needed an upgrade. He had heard about BioTherm from another greenhouse owner and told his boss to call 1-800-GET-HEAT.</p>
 		</div>
 		<div class="col-md-4">
 			<p><span class="d-block p-2 bg-heat text-white"><b>The BioTherm Solution</b></span></p>
@@ -84,7 +84,7 @@ Nor’Eastern also recently got natural gas in the area, so BioTherm provided th
 		<div class="col-md-4">
 			<p><span class="d-block p-2 bg-heat text-white"><b>How It Works</b></span></p>
 			<p>The StarFin aluminum finned pipe uses push connections that make it easy to replace the old rusty steel pipes. It also puts out twice the heat per linear foot, so less pipe was needed. The system provides precise gentle heating to the crop’s root zone.</p>
-			<p>The high heat output of SunFin under the gut- ters made for a perfect snow melt system that is quick and responsive during a snow event.
+			<p>The high heat output of SunFin under the gutters made for a perfect snow melt system that is quick and responsive during a snow event.
 The multiple condensing boiler system is designed to use latent heat from the flue gases, greatly increasing the efficiency of the system while providing redundancy. It allows Nor’Eastern a worry-free heating system without outrageous heating costs.</p>
 		</div>
 
