--- a/case-heat-strode.html
+++ b/case-heat-strode.html
@@ -73,7 +73,7 @@
 	<div class="row">
 		<div class="col-md-4">
 			<p><span class="d-block p-2 bg-heat text-white"><b>The Challenge</b></span></p>
-			<p>Business was almost going too well for Randy Strode and his son Ty of AgriStarts in Apopka, Florida. Product was in high demand and they knew they were going to need more plant volume while maintaining the already incredible quality and uniformity their cus- tomers had come to expect. Expansion was the answer. They choose BioTherm to design and install the heating system.</p>
+			<p>Business was almost going too well for Randy Strode and his son Ty of AgriStarts in Apopka, Florida. Product was in high demand and they knew they were going to need more plant volume while maintaining the already incredible quality and uniformity their customers had come to expect. Expansion was the answer. They choose BioTherm to design and install the heating system.</p>
 			<p>Agri-Starts may be a tissue culture-to-plug production business, but their needs are not much different from any demanding growing facility. If anything separates </p>
 		</div>
 		<div class="col-md-4">
@@ -84,7 +84,7 @@
 		<div class="col-md-4">
 			<p><span class="d-block p-2 bg-heat text-white"><b>How It Works</b></span></p>
 			<p>BioTherm designed AgriStarts’ boiler room with two fan-assisted, low mass boilers and the ability to expand the system to five total boilers when the next 50,000 square feet of greenhouse is built.</p>
-			<p>Good roots are king. The <a href="heat-products-duofin.html">DuoFin Under Bench System</a> that BioTherm installed pulls the roots of the baby plug down, strength- ening them and creating the required tur- gidity—and most importantly doing all this when the grower wants it to happen.</p>
+			<p>Good roots are king. The <a href="heat-products-duofin.html">DuoFin Under Bench System</a> that BioTherm installed pulls the roots of the baby plug down, strengthening them and creating the required turgidity—and most importantly doing all this when the grower wants it to happen.</p>
 		</div>
 
 	</div>
